# st-zephyr-projects

./: CMakeLists.txt  Kconfig.projects  west.yml
applications/jetbot/: CMakeLists.txt  prj.conf
applications/mqtt_sensor/: CMakeLists.txt  Kconfig  prj.conf
applications/mqtt_sensor/src/: main.c
boards/arm/stm32f411_black_pill/: Kconfig.board  Kconfig.defconfig  board.cmake  pinmux.c  stm32f411_black_pill.dts  stm32f411_black_pill.yaml  stm32f411_black_pill_defconfig
boards/arm/stm32f411_black_pill/support/: openocd.cfg
cmake/: boilerplate.cmake
share/zephyrbuild-package/cmake/: ZephyrBuildConfig.cmake
zephyr/: module.yml
